--- a/app/index.html
+++ b/app/index.html
@@ -45,12 +45,12 @@
 
       <div class="jumbotron">
         <h1>'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
+        <p class="lead ">Always a pleasure scaffolding your apps.</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
       </div>
 
       <div class="row marketing">
-        <div class="col-lg-6">
+        <div class="col-lg-6 foo">
           <h4>HTML5 Boilerplate</h4>
           <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
 
